# PC-benchmark

./: .gitignore
Project/: CMakeLists.txt  main.cpp
Project/test-files/: file1kb.txt  file1mb.txt  file512kb.txt
